.deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-hello-world
  namespace: default
  labels:
    app: go-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-hello-world
  template:
    metadata:
      labels:
        app: go-hello-world
    spec:
      imagePullSecrets:
        - name: git-secret
      containers:
        - name: go-hello-world-container
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "521Mi"
              cpu: "500m"
          image: harbor.nihatalim.com.tr/registry/go-hello-world:latest
          ports:
            - name: http
              containerPort: 8080
