.deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-hello-world-service
  namespace: default
spec:
  selector:
    app: go-hello-world
  ports:
    - name: http
      port: 8080
      targetPort: http
